--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,12 @@
 .text p{
     position: absolute;
 }
-.full-page{
-    width: 100%;
-    height: 700px;
-    background: url("../images/background.jpg")no-repeat fixed center;
-    padding: 50px 0;
-}
 .wrapper{
     width: 660px;
     height: 700px;
     background: #000;
     margin: 0 auto;
-    
+    margin-top: 50px;
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.72);
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.72);
     -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.72);
